[package]
name = "newty"
version = "0.1.0"
edition = "2021"
description = "A newtype utility crate. Yet to be stabilized."
license = "MIT OR GPL-3.0-or-later"

[dependencies]
fixedbitset = { version = "0.4.2", optional = true }
hashbrown = { version = "0.12.3", optional = true }
serde = { version = "1.0.145", optional = true, features = ["derive"]}

[features]
serde = ["dep:serde", "hashbrown?/serde", "fixedbitset?/serde"]
map = ["dep:hashbrown"]
set = ["dep:fixedbitset"]
all = ["map", "set", "serde"]
