[package]
name = "newty"
version = "0.3.0"
edition = "2021"
description = "A newtype utility crate. Yet to be stabilized."
license = "MIT OR GPL-3.0-or-later"

[dependencies]
serde = { version = "1.0.145", optional = true, features = ["derive"]}
fixedbitset = { version = "0.4.2", features = ["serde"] }

[features]
default = ["serde"]
serde = ["dep:serde"]
